2007-10-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: Historically, this
	file has made a pointless connection from a reader port to a
	writer port.  I'm not sure why.  This is finally causing some
	troubles, so I've commented the connection out.

	* src/libYARP_OS/src/Companion.cpp: added "yarp forward"
	capability, to forward commands through an intermediary.  This is
	useful for monitoring RPC command/reply sequences.  Streaming
	messages can of course already be monitored with "yarp read".
	This is experimental rather than polished work.
	
2007-10-15 Alessandro Scalzo <alessandro@liralab.it>

	* src/libYARP_OS/src/NameServer.cpp: Added --noauto option: if
	config file is not found, name server exits.

2007-10-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: fix for problem reported by
	Marco Randazzo, where calling Port::read(...,true) and then
	failing to eventually call Port::reply(...) causes a crash.

	* src/libYARP_OS/harness/PortTest.cpp: regression test for
	Marco Randazzo's problem.

2007-10-08 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_dev/mei
	* src/libYARP_dev/meiMotionControl
	* src/libYARP_dev/picolo_grabber
	* src/libYARP_dev/cyberglove
	*                /e504
	*                /fob
	*                /joypres

	Removed as previously planned. They will be placed in separate
	repositories. Could not redistribute them for violation of copyright.
	
2007-10-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpfs/yarpfs.cpp: directory structure basically in 
	place, and read/write operations work.

2007-10-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpfs/yarpfs.cpp: some experimental code for mapping from
	the YARP Network to a file system (analogous to the /proc
	directory on Linux).  Pre-alpha, not included in the main YARP
	build.

2007-10-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Network.h: add helper method